CHANGES: TR12223/gxd anatomy II/emap
1) changes to loadTerms.py for EMAPA/EMAPS
2) created 'emap' directory/moved emapload into this directory
3) fixed bug in sanity.py/missingField
4) added new emapload.py/sanity checks for assay annotations
5) changed EMAPA to incremental
emapload.config.default 
emapload.py 
emapload.sh 
emapQC.sh 
Install 
publishEmapa 
runEmapQC 
sanity.py 
sanity.sh

TAG: vocload-6-0-2-4
DATE: 2/8/2016
STAFF: sc
CHANGES:
1) OMIMtermcheck.py - added g.prefixPart = 'MGI:' so genotype RRIDs not included.

TAG: vocload-6-0-2-3
DATE: 2/2/2016
STAFF: dbm 
CHANGES: TR12163
1) Configuration.default: Change location of input file

TAG: vocload-6-0-2-2
DATE: 01/20/2014
STAFF: lec 
CHANGES:
1) TR11947/loadOBO-DC.py
2) TR11956/OMIMtermcheck.py
3) TR12021/OMIM/animalmodel report
4) loadNote.py/loadTerms.py:
change calls to MGI_NoteChunk to only create one row per note
as we no longer need to create chunks

TAG: vocload-tr12223-BP
DATE: 1/7/2016
STAFF: kstone

TAG: vocload-6-0-2-1
DATE: 12/09/2015
STAFF: lec
CHANGES:
1) TR12070/12116/biotype
see mgidbmigration/TR12070/sto80.csh
biotype.py
biotype_ensembl.config
biotype_ncbi.config
biotype_vega.config

TAG: vocload-6-0-0-3
TAG: vocload-6-0-0-2
DATE: 09/10/2015
STAFF: lec
CHANGES:
1) TR12070/cell ontology (CL)
CL.config, CL.rcd, CLindex.html
loadOBO.py : vocabName = 'Cell Ontology'

TAG: vocload-6-0-0-1
DATE: 07/24/2015
STAFF: lec
CHANGES:
1) TR11750/postgres

TAG: vocload-5-2-2-1
DATE: 06/19/2015
STAFF: dbm
CHANGES:
1) GO.config MA.config MCV.config MP.config RV.config: MAINTAINER update

TAG: vocload-5-2-1-5
DATE: 06/19/2015
STAFF: kstone
CHANGES: GO PG conversion

TAG: vocload-5-2-1-4
DATE: 04/10/2015
STAFF: lec
CHANGES:
1) TR11750/OMIMtermcheck.py

TAG: vocload-5-2-1-3
TAG: vocload-5-2-1-2
TAG: vocload-5-2-1-1
DATE: 01/22/2015, 01/23/2015
STAFF: kstone, lec
CHANGES:
1) TR11750/add PG slipping
2) loadOBO-DC.sh:DCLUSTER_FILENAME should be DCLUSTERSYN_FILE

TAG: vocload-5-1-9-3
DATE: 07/23/2014
STAFF: dbm