@@ -73,6 +73,9 @@ import string
 import db
 import reportlib
 
+db.setAutoTranslate(False)
+db.setAutoTranslateBE(False)
+
 # globals
 
 DELIM = '\t'
